creditkarma massive update

--- a/themes/minimal/layouts/index.html
+++ b/themes/minimal/layouts/index.html
@@ -7,9 +7,8 @@
         <h3 class="homepage-description">{{ markdownify .Site.Params.home_subtitle_1 }} <br> {{ markdownify .Site.Params.home_subtitle_2 }}</h3>
         {{ with .Content }} <div class="homepage-content text-justify">{{ . }}</div> {{ end }}
     </div>
-    <!--<div class="button_home" align="center"><a class="button_home_link" href="/amt-calculator/" ><h2>Calculate my AMT</h2></a></div>-->
     <br>
-    <br>
+    <div class="button_home" align="center"><a class="button_home_link" href="/filing_taxes/how_to_file_taxes_for_amt/" ><h2>File my taxes for free</h2></a></div>
     <br>
     <br>
 
