--- a/themes/minimal/layouts/partials/css.html
+++ b/themes/minimal/layouts/partials/css.html
@@ -108,7 +108,7 @@ h4.form-header, h4.iso-form-header {
 }
 
 img {
-  max-width: 100%;
+  max-width: 50% !important;
   height: auto; }
 
 figure {
@@ -419,7 +419,6 @@ select {
 
     #amt_calculator_result_message, #iso_result_message {
         font-weight: bold;
-        color: var(--accent);
     }
     table tr.table_divider {
         border-bottom: solid grey;
