--- a/layouts/shortcodes/iso-exercise-planner.html
+++ b/layouts/shortcodes/iso-exercise-planner.html
@@ -215,8 +215,15 @@
   </tr>
 </table>
 
-<h4> <a href="https://www.jdoqocy.com/b3111p-85-7NPOORQPRUWNPQROUPWW" class="link_to_ad freetaxusa_amt_calc_ad" target="_blank"> Now that you've planned for your taxes, file <strong>for free</strong> with FreeTaxUSA! </a></h4>
-<h4>Seriously, stop paying to file your taxes. It's supposed to be something you can do at no cost. FreeTaxUSA is one of the oldest and most trusted services that millions of Americans use every year!</h4>
+<!--<h4> <a href="https://www.jdoqocy.com/b3111p-85-7NPOORQPRUWNPQROUPWW" class="link_to_ad freetaxusa_amt_calc_ad" target="_blank"> Now that you've planned for your taxes, file <strong>for free</strong> with FreeTaxUSA! </a></h4>
+<h4>Seriously, stop paying to file your taxes. It's supposed to be something you can do at no cost. FreeTaxUSA is one of the oldest and most trusted services that millions of Americans use every year!</h4>-->
+
+<a href="/filing_taxes/how_to_file_taxes_for_amt"><h4> Next Step: Learn how to actually file your taxes in 3 easy steps</h4></a>
+<br>
+<a href="https://credit-karma-tax.pxf.io/amtsimplified" class="link_to_ad ck_iso_calc_ad">
+  <h4>Or file completely for FREE with Credit Karma, the software I personally use</h4>
+  <img src="/img/credit_karma_logo.png"/>
+</a>
 
 
 <script>
