--- a/layouts/shortcodes/amt-calculator.html
+++ b/layouts/shortcodes/amt-calculator.html
@@ -223,7 +223,7 @@
 
 <a href="/filing_taxes/how_to_file_taxes_for_amt"><h4> Next Step: Learn how to actually file your taxes in 3 easy steps</h4></a>
 <br>
-<a href="https://credit-karma-tax.pxf.io/amtsimplified" class="link_to_ad ck_amt_calc_ad">
+<a href="https://credit-karma-tax.pxf.io/amtsimplified" target="_blank" class="link_to_ad ck_amt_calc_ad">
   <h4>Or file completely for FREE with Credit Karma, the software I personally use</h4>
   <img src="/img/credit_karma_logo.png"/>
 </a>
