more ad optimizations

--- a/layouts/shortcodes/amt-calculator.html
+++ b/layouts/shortcodes/amt-calculator.html
@@ -222,12 +222,15 @@
 <h4>Seriously, stop paying to file your taxes. It's supposed to be something you can do at no cost. FreeTaxUSA is one of the oldest and most trusted services that millions of Americans use every year!</h4>-->
 
 <a href="/filing_taxes/how_to_file_taxes_for_amt"><h4> Next Step: Learn how to actually file your taxes in 3 easy steps</h4></a>
+<hr>
+<i><h4>This is the only ad you'll ever see on this website<br>
+It's because I've used Credit Karma for years and <strong>recommend it to everyone</strong></h4></i>
 <br>
 <a href="https://credit-karma-tax.pxf.io/amtsimplified" target="_blank" class="link_to_ad ck_amt_calc_ad">
-  <h4>Or file completely for FREE with Credit Karma, the software I personally use</h4>
-  <img src="/img/credit_karma_logo.png"/>
+  <img src="/img/credit_karma_banner_ad.png" class="ck_amt_calc_ad_img"/>
 </a>
 
+<br>
 <br>
 <button type="button" class="collapsible" id="regular_income_tax_results_collapsible">See Regular Income Tax Breakdown</button>
 <table class="table table-bordered table-hover" id="regular_income_tax_results_table"><thead>
