--- a/themes/minimal/layouts/partials/css.html
+++ b/themes/minimal/layouts/partials/css.html
@@ -111,6 +111,16 @@ img {
   max-width: 50% !important;
   height: auto; }
 
+.img_logo_small {
+  width:480px;
+  height:48px; 
+}
+
+.ck_amt_calc_ad_img, .ck_iso_calc_ad_img {
+  max-width:800px;
+  min-width:480px;
+}
+
 figure {
   margin: 0; }
 
