--- a/layouts/shortcodes/iso-exercise-planner.html
+++ b/layouts/shortcodes/iso-exercise-planner.html
@@ -179,8 +179,7 @@
 </form>
 
 <br>
-<h4 id="iso_result_message" class="result_header"> </h4>
-<br>
+<h4 id="iso_result_message" class="result_header"> Results: </h4>
 
 <table class="hidden table table-bordered table-striped" id="iso_planner_result_table">
   <tr id="iso_planner_result_header">
@@ -219,12 +218,13 @@
 <h4>Seriously, stop paying to file your taxes. It's supposed to be something you can do at no cost. FreeTaxUSA is one of the oldest and most trusted services that millions of Americans use every year!</h4>-->
 
 <a href="/filing_taxes/how_to_file_taxes_for_amt"><h4> Next Step: Learn how to actually file your taxes in 3 easy steps</h4></a>
+<hr>
+<i><h4>This is the only ad you'll ever see on this website<br>
+It's because I've used Credit Karma for years and <strong>recommend it to everyone</strong></h4></i>
 <br>
 <a href="https://credit-karma-tax.pxf.io/amtsimplified" target="_blank" class="link_to_ad ck_iso_calc_ad">
-  <h4>Or file completely for FREE with Credit Karma, the software I personally use</h4>
-  <img src="/img/credit_karma_logo.png"/>
+  <img src="/img/credit_karma_banner_ad.png" class="ck_iso_calc_ad_img"/>
 </a>
-
 
 <script>
   // Dyanmic forms for ISO Spread Details
