--- a/layouts/shortcodes/amt-calculator.html
+++ b/layouts/shortcodes/amt-calculator.html
@@ -221,11 +221,9 @@
 <!--<h4> <a href="https://www.jdoqocy.com/b3111p-85-7NPOORQPRUWNPQROUPWW" class="link_to_ad freetaxusa_amt_calc_ad" target="_blank"> Now that you have calculated your AMT, file your taxes <strong>for free</strong> with FreeTaxUSA! </a></h4>
 <h4>Seriously, stop paying to file your taxes. It's supposed to be something you can do at no cost. FreeTaxUSA is one of the oldest and most trusted services that millions of Americans use every year!</h4>-->
 
-<a href="/filing_taxes/how_to_file_taxes_for_amt"><h4> Next Step: Learn how to actually file your taxes in 3 easy steps</h4></a>
+<a href="/filing_taxes/how_to_file_taxes_for_amt"><h4> Next Step: Learn how to file your Alternative Minimum Taxes in 3 easy steps</h4></a>
 <hr>
-<i><h4>This is the only ad you'll ever see on this website<br>
-It's because I've used Credit Karma for years and <strong>recommend it to everyone</strong></h4></i>
-<br>
+
 <a href="https://credit-karma-tax.pxf.io/amtsimplified" target="_blank" class="link_to_ad ck_amt_calc_ad">
   <img src="/img/credit_karma_banner_ad.png" class="ck_amt_calc_ad_img"/>
 </a>
