--- a/layouts/shortcodes/direct_to_filing_taxes.html
+++ b/layouts/shortcodes/direct_to_filing_taxes.html
@@ -1,3 +1,3 @@
 <html>
-If you are already familiar with the AMT and want to learn how to <strong><a href="/filing_taxes/how_to_file_taxes_for_amt">file your taxes for free in 3 easy steps read our article here.</a></strong>
+If you already know about the AMT, read our article to <strong><a href="/articles/how_to_file_taxes_for_amt" class="disclaimer_link"> how to file your AMT taxes for free in 3 easy steps</a></strong>
 </html>
