--- a/themes/minimal/layouts/partials/css.html
+++ b/themes/minimal/layouts/partials/css.html
@@ -473,14 +473,15 @@ select {
       content: "\2796"; /* Unicode character for "minus" sign (-) */
     }
 
-    a.donate_link, li.navbar_links:last-of-type a{
+    a.next_up_link, a.disclaimer_link, a.calculator_to_money_article_link, a.donate_link, li.navbar_links:last-of-type a{
       color: #5F7FFF !important;
     }
 
-    a.donate_link:hover, li.navbar_links:last-of-type a:hover {
+    a.next_up_link:hover, a.disclaimer_link:hover, a.calculator_to_money_article_link:hover, a.donate_link:hover, li.navbar_links:last-of-type a:hover {
       color: #5F7FFF !important;
       text-decoration: underline;
     }
+
 
     /* I GIVE UP ON TOOLTIPS
     .tooltip_label {
