ad css mobile changes

--- a/layouts/shortcodes/iso-exercise-planner.html
+++ b/layouts/shortcodes/iso-exercise-planner.html
@@ -177,8 +177,9 @@
   </div>
   <input type="button" class="calculator_submit" id="iso_planner_calculator_submit" value="Calculate" onclick=check_required()>
 </form>
-
 <br>
+<a href="/filing_taxes/how_to_file_taxes_for_amt" class="calculator_to_money_article_link"><h4> >> Next Step: Learn how to file your Alternative Minimum Taxes in 3 easy steps</h4></a>
+<hr>
 <h4 id="iso_result_message" class="result_header"> Results: </h4>
 
 <table class="hidden table table-bordered table-striped" id="iso_planner_result_table">
@@ -217,9 +218,9 @@
 <!--<h4> <a href="https://www.jdoqocy.com/b3111p-85-7NPOORQPRUWNPQROUPWW" class="link_to_ad freetaxusa_amt_calc_ad" target="_blank"> Now that you've planned for your taxes, file <strong>for free</strong> with FreeTaxUSA! </a></h4>
 <h4>Seriously, stop paying to file your taxes. It's supposed to be something you can do at no cost. FreeTaxUSA is one of the oldest and most trusted services that millions of Americans use every year!</h4>-->
 
-<a href="/filing_taxes/how_to_file_taxes_for_amt" class="calculator_to_money_article_link"><h4> >> Next Step: Learn how to file your Alternative Minimum Taxes in 3 easy steps</h4></a>
 <hr>
 <a href="https://credit-karma-tax.pxf.io/amtsimplified" target="_blank" class="link_to_ad ck_iso_calc_ad">
+  <h4> Stop paying to file your taxes - seriously, it should be free. I personally use Credit Karma</h4>
   <img src="/img/credit_karma_banner_ad.png" class="ck_iso_calc_ad_img"/>
 </a>
 
