--- a/layouts/shortcodes/amt-calculator.html
+++ b/layouts/shortcodes/amt-calculator.html
@@ -197,6 +197,8 @@
   <input type="button" class="calculator_submit" id="amt_calculator_submit" onclick=check_required() value="Calculate my AMT!">
 </form>
 <br>
+<a href="/filing_taxes/how_to_file_taxes_for_amt" class="calculator_to_money_article_link"><h4> >> Next Step: Learn how to file your Alternative Minimum Taxes in 3 easy steps</h4></a>
+<hr>
 <h4 id="amt_calculator_result_message" class="result-header"> Results: </h4>
 <br>
 <button type="button" class="collapsible active" id="overall_tax_results_collapsible">See Overall Tax Results</button>
@@ -221,10 +223,8 @@
 <!--<h4> <a href="https://www.jdoqocy.com/b3111p-85-7NPOORQPRUWNPQROUPWW" class="link_to_ad freetaxusa_amt_calc_ad" target="_blank"> Now that you have calculated your AMT, file your taxes <strong>for free</strong> with FreeTaxUSA! </a></h4>
 <h4>Seriously, stop paying to file your taxes. It's supposed to be something you can do at no cost. FreeTaxUSA is one of the oldest and most trusted services that millions of Americans use every year!</h4>-->
 
-<a href="/filing_taxes/how_to_file_taxes_for_amt" class="calculator_to_money_article_link"><h4> >> Next Step: Learn how to file your Alternative Minimum Taxes in 3 easy steps</h4></a>
-<hr>
-
 <a href="https://credit-karma-tax.pxf.io/amtsimplified" target="_blank" class="link_to_ad ck_amt_calc_ad">
+  <h4> Stop paying to file your taxes - seriously, it should be free. I personally use Credit Karma</h4>
   <img src="/img/credit_karma_banner_ad.png" class="ck_amt_calc_ad_img"/>
 </a>
 
