--- a/layouts/shortcodes/ck_footer_banner.html
+++ b/layouts/shortcodes/ck_footer_banner.html
@@ -1,3 +1,4 @@
 <html>
-<a href="https://creditkarma.myi4.net/c/2654943/981956/10161" target="_top" id="981956"><img src="//a.impactradius-go.com/display-ad/10161-981956" border="0" alt="" width="728" height="90"/></a><img height="0" width="0" src="https://imp.pxf.io/i/2654943/981956/10161" style="position:absolute;visibility:hidden;" border="0" />
+
+<a href="https://creditkarma.myi4.net/signup" target="_top" id="972119"><img src="//a.impactradius-go.com/display-ad/12855-972119" class="article_header_ad"/></a><img height="0" width="0" src="https://imp.pxf.io/i/2654943/972119/12855" style="position:absolute;visibility:hidden;" border="0"/>
 </html>
