--- a/themes/minimal/layouts/partials/css.html
+++ b/themes/minimal/layouts/partials/css.html
@@ -498,6 +498,13 @@ select {
        }
     }
 
+    .article_header_ad {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        
+    }
+
     /* Divider for homepage sectional */
     .small-home-post-border:not(:last-child) {
     border-right: 1px solid #acb9c4;
