testing for google ads

--- a/layouts/shortcodes/ck_footer_banner.html
+++ b/layouts/shortcodes/ck_footer_banner.html
@@ -1,4 +1,17 @@
 <html>
 
-<a href="https://creditkarma.myi4.net/signup" target="_top" id="972119"><img src="//a.impactradius-go.com/display-ad/12855-972119" class="article_header_ad"/></a><img height="0" width="0" src="https://imp.pxf.io/i/2654943/972119/12855" style="position:absolute;visibility:hidden;" border="0"/>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- Horizontal Banner Ad -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-3493120493138233"
+     data-ad-slot="8339849781"
+     data-ad-format="auto"
+     data-full-width-responsive="true"
+     ></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 </html>
+
+
