--- a/layouts/shortcodes/amt-calculator.html
+++ b/layouts/shortcodes/amt-calculator.html
@@ -201,7 +201,7 @@
 <hr>
 <h4 id="amt_calculator_result_message" class="result-header"> Results: </h4>
 <br>
-<button type="button" class="collapsible active" id="overall_tax_results_collapsible">See Overall Tax Results</button>
+<button type="button" class="collapsible active" id="overall_tax_results_collapsible">See Overall Tax Results </button>
 <table class="table table-bordered table-hover" id="overall_tax_results_table"><thead>
     <tr>
       <th>Tax System</th>
@@ -219,14 +219,13 @@
     </tr>
   </tbody>
 </table>
+<p><i>*Neither of the above includes FICA or Long Term Capital Gains</i></p>
 
-<!--<h4> <a href="https://www.jdoqocy.com/b3111p-85-7NPOORQPRUWNPQROUPWW" class="link_to_ad freetaxusa_amt_calc_ad" target="_blank"> Now that you have calculated your AMT, file your taxes <strong>for free</strong> with FreeTaxUSA! </a></h4>
-<h4>Seriously, stop paying to file your taxes. It's supposed to be something you can do at no cost. FreeTaxUSA is one of the oldest and most trusted services that millions of Americans use every year!</h4>-->
 
-<a href="https://credit-karma-tax.pxf.io/amtsimplified" target="_blank" class="link_to_ad ck_amt_calc_ad">
+<!--<a href="https://credit-karma-tax.pxf.io/amtsimplified" target="_blank" class="link_to_ad ck_amt_calc_ad">
   <h4> Stop paying to file your taxes - seriously, it should be free. I personally use Credit Karma</h4>
   <img src="/img/credit_karma_banner_ad.png" class="ck_amt_calc_ad_img"/>
-</a>
+</a>-->
 
 <br>
 <br>
@@ -242,10 +241,10 @@
       <td>Income (Wages & Net Capital Gains)</td>
       <td id="reg_table_total_income_td"></td>
     </tr>
-    <tr>
+    <!--<tr>
       <td>Net Long Term Capital Gains Only</td>
       <td id="reg_table_long_term_capital_gains_td"></td>
-    </tr>
+    </tr>-->
     <tr class="table_divider">
       <td>Capital Loss Carryforward (to next year)</td>
       <td id="reg_table_leftover_capital_loss_carryover_td"></td>
@@ -275,10 +274,10 @@
       <td id="reg_table_taxable_income_td"></td>
     </tr>
     <tr>
-      <td>Federal Income Tax</td>
+      <td>Federal Income Tax </td>
       <td id="reg_table_federal_income_tax_owed_td"></td>
     </tr>
-    <tr>
+    <!--<tr>
       <td>FICA: Social Security Tax</td>
       <td id="reg_table_ssi_tax_owed_td"></td>
     </tr>
@@ -289,10 +288,10 @@
     <tr class="table_divider">
       <td>Long Term Capital Gains Tax</td>
       <td id="reg_table_long_term_capital_gains_tax_owed_td"></td>
-    </tr>
+    </tr>-->
     <tr>
-      <td>Total Regular Income Taxes Owed</td>
-      <td id="reg_table_regular_income_tax_owed_td"></td>
+      <td><strong>Total Regular Income Taxes Owed</strong></td>
+      <td id="reg_table_regular_income_tax_owed_td"><strong></strong></td>
     </tr>
   </tbody>
 </table>
@@ -350,10 +349,10 @@
       <td>Alternative Minimum Tax</td>
       <td id="amt_table_amt_tax_owed_td"></td>
     </tr>
-    <tr class="table_divider">
+    <!--<tr class="table_divider">
       <td>Long Term Capital Gains Tax</td>
       <td id="amt_table_long_term_capital_gains_tax_owed_td"></td>
-    </tr>
+    </tr>-->
     <tr>
       <td>Total Alternative Minimum Tax Owed</td>
       <td id="amt_table_final_amt_tax_owed_td"></td>
@@ -883,7 +882,7 @@
     
     // Calculate Total Regular Income Tax (Federal Income Tax, Medicare, SSI, Long Term)
     var regular_income_tax_owed = 0;
-    regular_income_tax_owed = federal_income_tax_owed + medicare_tax_owed + ssi_tax_owed + long_term_capital_gains_tax_owed;
+    regular_income_tax_owed = federal_income_tax_owed;
 
     // Calculate ISO Spread
     var iso_spread_subtotal_1 = parseFloat(shares_exercised_1) * (parseFloat(fmv_1) - parseFloat(strike_price_1));
@@ -928,7 +927,7 @@
     } else {
       var amt_tax_owed = amti_final * 0.26;
     }
-    var final_amt_tax_owed = amt_tax_owed + long_term_capital_gains_tax_owed;
+    var final_amt_tax_owed = amt_tax_owed;
 
     if (regular_income_tax_owed >= final_amt_tax_owed) {
       var amt_calculator_result_message = "Results: Because your regular income tax owed is more than your AMT, you will not need to pay any AMT";
@@ -979,13 +978,13 @@
     document.getElementById("reg_table_final_deduction_td").innerHTML = regular_deduction_final;
     document.getElementById("reg_table_taxable_income_td").innerHTML = taxable_income;
     document.getElementById("reg_table_federal_income_tax_owed_td").innerHTML = federal_income_tax_owed;
-    document.getElementById("reg_table_ssi_tax_owed_td").innerHTML = ssi_tax_owed;
-    document.getElementById("reg_table_medicare_tax_owed_td").innerHTML = medicare_tax_owed;
-    document.getElementById("reg_table_long_term_capital_gains_tax_owed_td").innerHTML = long_term_capital_gains_tax_owed;
+    //document.getElementById("reg_table_ssi_tax_owed_td").innerHTML = ssi_tax_owed;
+    //document.getElementById("reg_table_medicare_tax_owed_td").innerHTML = medicare_tax_owed;
+    //document.getElementById("reg_table_long_term_capital_gains_tax_owed_td").innerHTML = long_term_capital_gains_tax_owed;
     document.getElementById("reg_table_regular_income_tax_owed_td").innerHTML = regular_income_tax_owed;
     // Fill in AMT Results Table
     document.getElementById("amt_table_total_income_td").innerHTML = total_income;
-    document.getElementById("amt_table_long_term_capital_gains_td").innerHTML = long_term_capital_gains_for_calc;
+    //document.getElementById("amt_table_long_term_capital_gains_td").innerHTML = long_term_capital_gains_for_calc;
     document.getElementById("amt_table_leftover_capital_loss_carryover_td").innerHTML = leftover_capital_loss_carryover;
     document.getElementById("amt_table_iso_spread_subtotal_td").innerHTML = iso_spread_subtotal;
     document.getElementById("amt_table_total_exemptions_td").innerHTML = total_exemptions;
