--- a/layouts/shortcodes/iso-exercise-planner.html
+++ b/layouts/shortcodes/iso-exercise-planner.html
@@ -218,11 +218,11 @@
 <!--<h4> <a href="https://www.jdoqocy.com/b3111p-85-7NPOORQPRUWNPQROUPWW" class="link_to_ad freetaxusa_amt_calc_ad" target="_blank"> Now that you've planned for your taxes, file <strong>for free</strong> with FreeTaxUSA! </a></h4>
 <h4>Seriously, stop paying to file your taxes. It's supposed to be something you can do at no cost. FreeTaxUSA is one of the oldest and most trusted services that millions of Americans use every year!</h4>-->
 
-<hr>
+<!--<hr>
 <a href="https://credit-karma-tax.pxf.io/amtsimplified" target="_blank" class="link_to_ad ck_iso_calc_ad">
   <h4> Stop paying to file your taxes - seriously, it should be free. I personally use Credit Karma</h4>
   <img src="/img/credit_karma_banner_ad.png" class="ck_iso_calc_ad_img"/>
-</a>
+</a>-->
 
 <script>
   // Dyanmic forms for ISO Spread Details
@@ -648,7 +648,7 @@
     
     // Calculate Total Regular Income Tax (Federal Income Tax, Medicare, SSI, Long Term)
     var regular_income_tax_owed = 0;
-    regular_income_tax_owed = federal_income_tax_owed + medicare_tax_owed + ssi_tax_owed + long_term_capital_gains_tax_owed;
+    regular_income_tax_owed = federal_income_tax_owed;
 
     // Calcualte AMT Baseline (before I SO spread, AMT exemption)
     var amt_eligible_deductions = parseFloat(mortgage_interest);
