--- a/themes/minimal/layouts/index.html
+++ b/themes/minimal/layouts/index.html
@@ -29,7 +29,7 @@
 		        <div class="sectional-box-content" >
 		          <h4 ><a href="/amt-calculator/" >Calculate my AMT</a></h4>
 		          <p> Do I owe additional taxes this year? What about next year?</p> 
-		          <p>Use our <strong>most popular, free online calculator</strong> to determine the taxes you may owe.</p>
+		          <p>Use our <strong>most popular online calculator</strong> to determine the taxes you may owe.</p>
 		        </div>
 		      </div>
 		    </div>
